--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script defer type="text/javascript" src="main.js"></script>
   <link
       rel="icon"
-      href="../../assets/logo/hw03-logo.png"
+      href="assets/logo/hw03-logo.png"
       type="image/icon type"
     />
 </head>
