--- a/pages/hour-of-code/hour-of-code.html
+++ b/pages/hour-of-code/hour-of-code.html
@@ -27,7 +27,7 @@
           <a href="/index.html">
             <img
               class="header__logo"
-              src="/assets/logo/ada_logo_white.png"
+              src="../../assets/logo/ada_logo_white.png"
               alt="logo"
             />
           </a>
