code-artist: minor change

--- a/pages/code-artist/code-artist.html
+++ b/pages/code-artist/code-artist.html
@@ -10,6 +10,11 @@
   <title>Code art</title>
   <link rel="stylesheet" href="./code-artist.css">
   <script defer type="module" src="./code-artist.js"></script>
+  <link
+      rel="icon"
+      href="../../assets/logo/hw03-logo.png"
+      type="image/icon type"
+    />
 </head>
 
 
