hour-of-code: change minor

--- a/pages/hour-of-code/hour-of-code.html
+++ b/pages/hour-of-code/hour-of-code.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <!-- 
     SITE 1101 Principles of Information Systems 
-    (c)202X by Name Surname 
+    (c)202X by Asma Hajizada 
     Submitted in partial fulfillment of the requirements of the course.
 -->
 <html>
   <head>
     <title>Hour of Code - Event</title>
     <link rel="stylesheet" href="hour-of-code.css" />
-    <script defer type="text/javascript" src="/main.js"></script>
+    <script defer type="text/javascript" src="../../main.js"></script>
     <link
       rel="icon"
       href="../../assets/logo/hw03-logo.png"
@@ -42,7 +42,9 @@
 
         <div>
           <ul class="navigation__links">
-            <li><a href="../team-members/team-members.html">Our Team</a></li>
+            <li>
+              <a href="../team-members/team-members.html">Our Team</a>
+            </li>
             <li>
               <a href="../hour-of-code/hour-of-code.html">Hour of Code</a>
             </li>
@@ -50,11 +52,11 @@
               <a href="../web-project/web-project.html">Web Project</a>
             </li>
             <li>
-              <a href="../code-artist/code-artist.html"
-                >Code art (feat. Araz Yusubov)</a
-              >
+              <a href="../code-artist/code-artist.html">Code art (feat. Araz Yusubov)</a>
             </li>
-            <li><a href="/index.html">Home page</a></li>
+            <li>
+              <a href="../../index.html">Home page</a>
+            </li>
           </ul>
         </div>
 
