--- a/index.html
+++ b/index.html
@@ -7,28 +7,23 @@
 <html>
 
 <head>
-  <title>Code Commanders</title>
+  <title>Welcome</title>
   <link rel="stylesheet" href="styles.css">
   <script defer type="text/javascript" src="main.js"></script>
-  <link
-      rel="icon"
-      href="assets/logo/hw03-logo.png"
-      type="image/icon type"
-    />
 </head>
 
-<body>
+<body style="display: flex; flex-direction: column; justify-content: space-between;">
   <header>
     <div class="header__container">
       <button class="button" id="burgerButton">
-        Contents
+        contents
       </button>
 
       <h1>️Welcome!</h1>
 
       <div style="height: inherit">
         <a href="./index.html">
-          <img class="header__logo" src="assets/logo/ada_logo_white.png" alt="logo">
+          <img class="header__logo" height="72" src="assets/logo/ada_logo_color.png" alt="ada logo">
         </a>
       </div>
     </div>
@@ -51,45 +46,31 @@
         </ul>
       </div>
 
-      <button class="button navigation__button" id="navButton">Close</button>
+      <button class="button navigation__button" id="navButton">close</button>
     </div>
   </nav>
 
 
 
   <main style="display: flex; flex-direction: column; align-items: center; padding: 2rem;">
-    <p class="welcome__word">Welcome to the official website of Code Commanders, 
-      where creativity meets code! 🚀</p>
-      <br>
-    <p class="welcome__paragraph">We’re thrilled to have you here and can’t wait 
-      to show you what we’ve been working on as a team. Our site is a labor of love, 
-      crafted to showcase not just our skills but also the fun and passion that brought us together. 💻✨</p>
 
-    <p class="welcome__paragraph">Feel free to explore the four exciting pages we’ve 
-      designed just for you, all easily accessible from the content bar above. 
-      Dive into our Hour of Code – Event (by <strong><a href="pages/hour-of-code/hour-of-code.html" class="name-links">Asma Hajizada</a></strong>) page to learn about an awesome initiative 
-      that gets everyone coding, one hour at a time. Meet the brilliant minds behind 
-      Code Commanders on our Meet Our Team page (by <strong><a href="pages/team-members/team-members.html" class="name-links">Nazli Nasirli</a></strong>), where we share our journey, quirks, 
-      and teamwork stories.</p>
-
-    <p class="welcome__paragraph">Curious about the process behind this website? Head over to our Website Project (by <strong><a href="pages/web-project/web-project.html" class="name-links">Fidan Khalilova</a></strong> [also Team Leader]) 
-      Overview to get a behind-the-scenes look at how we turned ideas into reality. 
-      And for those who love a blend of technology and creativity, don’t miss Code Art (by <strong><a href="pages/web-project/web-project.html" class="name-links">Egor Martynov</a></strong>), 
-      where we showcase some jaw-dropping digital artwork made possible by coding magic. 
-      🎨🤖</p>
-    
-    <p class="welcome__paragraph">Whether you’re here to be inspired, to connect, or simply to explore, we hope you
-       enjoy your time navigating our site. Thanks for stopping by, and welcome to the 
-       Code Commanders universe! 🌟</p>
-
+    <p class="welcome__paragraph">Welcome to our first website, created with simple HTML, CSS, and JS technologies.
+      There are four of us in the
+      team - <a href="./pages/web-project/web-project.html">Fidan Khalilova</a>,
+      <a href="./pages/team-members/team-members.html">Nazli Nasirli</a>,
+      <a href="./pages/hour-of-code/hour-of-code.html">Asma Hajizada</a>,
+      and <a href="./pages/code-artist/code-artist.html">Egor Martynov</a>.
+    </p>
+    <p class="welcome__paragraph">This website will lead you through some interesting stories about our team, our
+      projects, and some other experiences
+      we had during the course. To get started, please visit the contents of our website.</p>
+    <p class="welcome__paragraph">Thank you for visiting! We hope you find this website enjoyable.</p>
   </main>
-  <footer>
-    <footer>
-      <p><a href="index.html"><img src="assets/logo/ada_logo_white.png" alt="ADA LOGO" /></a></p>
-      <p>ADA University | SITE 1101 | 2024</p>
-    </footer>
-  </footer>
 
+  <footer>
+    <p><img src="../../assets/logo/ada_logo_white.png" height="33" alt="ada logo" /></p>
+    <p style="padding: 4px;">ADA University | SITE 1101 | 2024</p>
+  </footer>
 </body>
 
 </html>
