--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <title>Welcome</title>
   <link rel="stylesheet" href="styles.css">
   <script defer type="text/javascript" src="main.js"></script>
+  <link
+      rel="icon"
+      href="../../assets/logo/hw03-logo.png"
+      type="image/icon type"
+    />
 </head>
 
 <body style="display: flex; flex-direction: column; justify-content: space-between;">
@@ -56,10 +61,10 @@
 
     <p class="welcome__paragraph">Welcome to our first website, created with simple HTML, CSS, and JS technologies.
       There are four of us in the
-      team - <a href="./pages/web-project/web-project.html">Fidan Khalilova</a>,
-      <a href="./pages/team-members/team-members.html">Nazli Nasirli</a>,
-      <a href="./pages/hour-of-code/hour-of-code.html">Asma Hajizada</a>,
-      and <a href="./pages/code-artist/code-artist.html">Egor Martynov</a>.
+      team - <a href="../../pages/web-project/web-project.html">Fidan Khalilova</a>,
+      <a href="../../pages/team-members/team-members.html">Nazli Nasirli</a>,
+      <a href="../../pages/hour-of-code/hour-of-code.html">Asma Hajizada</a>,
+      and <a href="../../pages/code-artist/code-artist.html">Egor Martynov</a>.
     </p>
     <p class="welcome__paragraph">This website will lead you through some interesting stories about our team, our
       projects, and some other experiences
@@ -68,7 +73,7 @@
   </main>
 
   <footer>
-    <p><img src="../../assets/logo/ada_logo_white.png" height="33" alt="ada logo" /></p>
+    <p><img src="assets/logo/ada_logo_white.png" height="33" alt="ada logo" /></p>
     <p style="padding: 4px;">ADA University | SITE 1101 | 2024</p>
   </footer>
 </body>
